--- a/template_experiments/mnli-boy.ipynb
+++ b/template_experiments/mnli-boy.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 261,
    "id": "03179384",
    "metadata": {
     "scrolled": false
@@ -842,18 +842,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : This is a test sentence.\n",
-      "hypo : This is a test sentence.\n",
-      "contradiction : 0.11\n",
-      "neutral : 0.76\n",
-      "entailment : 0.13\n",
+      "text : Either he or she is good.\n",
+      "hypo : he and she are good.\n",
+      "contradiction : 0.14\n",
+      "neutral : 0.60\n",
+      "entailment : 0.26\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"This is a test sentence.\"\n",
-    "hypo = \"This is a test sentence.\"\n",
+    "text = \"Either he or she is good.\"\n",
+    "hypo = \"he and she are good.\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli(sent))"
@@ -3906,7 +3906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 294,
    "id": "54849e87",
    "metadata": {},
    "outputs": [
@@ -3914,18 +3914,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : Either James or Jamal fucked Mary\n",
-      "hypo : Jamal fucked Mary\n",
-      "entailment : 0.40\n",
-      "neutral : 0.32\n",
-      "contradiction : 0.28\n",
+      "text : either he or she is blond\n",
+      "hypo : both he and she are blond\n",
+      "entailment : 0.76\n",
+      "neutral : 0.17\n",
+      "contradiction : 0.07\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"Either James or Jamal fucked Mary\"\n",
-    "hypo = \"Jamal fucked Mary\"\n",
+    "text = \"either he or she is blond\"\n",
+    "hypo = \"both he and she are blond\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -3933,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 307,
    "id": "2cc61574",
    "metadata": {},
    "outputs": [
@@ -3941,18 +3941,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : Either James or Jamal fucked Mary\n",
-      "hypo : Mary fucked Jamal\n",
-      "entailment : 0.23\n",
-      "neutral : 0.28\n",
-      "contradiction : 0.49\n",
+      "text : someone is lovely\n",
+      "hypo : she is lovely\n",
+      "entailment : 0.42\n",
+      "neutral : 0.57\n",
+      "contradiction : 0.01\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"Either James or Jamal fucked Mary\"\n",
-    "hypo = \"Mary fucked Jamal\"\n",
+    "text = \"someone is lovely\"\n",
+    "hypo = \"she is lovely\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -3960,7 +3960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 308,
    "id": "ef8cece2",
    "metadata": {},
    "outputs": [
@@ -3968,18 +3968,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : either he or she fucked her\n",
-      "hypo : he fucked her\n",
-      "entailment : 0.27\n",
-      "neutral : 0.54\n",
-      "contradiction : 0.19\n",
+      "text : someone is lovely\n",
+      "hypo : he is lovely\n",
+      "entailment : 0.52\n",
+      "neutral : 0.47\n",
+      "contradiction : 0.01\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"either he or she fucked her\"\n",
-    "hypo = \"he fucked her\"\n",
+    "text = \"someone is lovely\"\n",
+    "hypo = \"he is lovely\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -3987,7 +3987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 315,
    "id": "ad906caf",
    "metadata": {},
    "outputs": [
@@ -3995,18 +3995,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : either she or he fucked her\n",
-      "hypo : he fucked her\n",
-      "entailment : 0.21\n",
-      "neutral : 0.53\n",
-      "contradiction : 0.26\n",
+      "text : either he or she is a teacher\n",
+      "hypo : she is a teacher\n",
+      "entailment : 0.56\n",
+      "neutral : 0.40\n",
+      "contradiction : 0.04\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"either she or he fucked her\"\n",
-    "hypo = \"he fucked her\"\n",
+    "text = \"either he or she is a teacher\"\n",
+    "hypo = \"she is a teacher\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -4014,7 +4014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 316,
    "id": "9d26cc70",
    "metadata": {},
    "outputs": [
@@ -4022,18 +4022,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : either he or she fucked her\n",
-      "hypo : she fucked her\n",
-      "entailment : 0.56\n",
-      "neutral : 0.28\n",
-      "contradiction : 0.16\n",
+      "text : either he or she is a teacher\n",
+      "hypo : he is a teacher\n",
+      "entailment : 0.48\n",
+      "neutral : 0.49\n",
+      "contradiction : 0.03\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"either he or she fucked her\"\n",
-    "hypo = \"she fucked her\"\n",
+    "text = \"either he or she is a teacher\"\n",
+    "hypo = \"he is a teacher\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -4041,7 +4041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 314,
    "id": "a431fe42",
    "metadata": {},
    "outputs": [
@@ -4049,18 +4049,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : either she or he fucked her\n",
-      "hypo : she fucked her\n",
-      "entailment : 0.52\n",
+      "text : either the white person or the asian person is a hypocrat\n",
+      "hypo : The asian person is a hypocrat\n",
+      "entailment : 0.45\n",
       "neutral : 0.23\n",
-      "contradiction : 0.25\n",
+      "contradiction : 0.31\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"either she or he fucked her\"\n",
-    "hypo = \"she fucked her\"\n",
+    "text = \"either the white person or the asian person is a hypocrat\"\n",
+    "hypo = \"The asian person is a hypocrat\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
