--- a/analysis/name_occupation_in_nli.ipynb
+++ b/analysis/name_occupation_in_nli.ipynb
@@ -4825,7 +4825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9dc8f10",
+   "id": "360bae07",
    "metadata": {},
    "source": [
     "## 3. Gomu Attributes in NLI dataset"
@@ -4834,7 +4834,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7a650208",
+   "id": "2d588e14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4845,7 +4845,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7fdf11dd",
+   "id": "9c8b28cd",
    "metadata": {},
    "outputs": [
     {
@@ -4866,7 +4866,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6ec8b57e",
+   "id": "ea070710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4882,7 +4882,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "eff08a76",
+   "id": "f507de63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4892,7 +4892,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f7aeb8a1",
+   "id": "a22508a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4902,7 +4902,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ffc433e0",
+   "id": "795db929",
    "metadata": {
     "scrolled": false
    },
@@ -5087,7 +5087,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0c4b0636",
+   "id": "ecfd4fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5097,30 +5097,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7d2e308b",
+   "execution_count": 24,
+   "id": "8ce723e8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'save_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-00ae86991085>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msave_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattribute_count_list_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'save_df' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/boychaboy/anaconda3/envs/gomu/lib/python3.8/site-packages/pandas/core/frame.py:1549: FutureWarning: Using short name for 'orient' is deprecated. Only the options: ('dict', list, 'series', 'split', 'records', 'index') will be used in a future version. Use one of the above to silence this warning.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "save_df(attribute_count_list_df, '')"
+    "save_df(attribute_count_list_df, 'attribute_occurence')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1537bc6",
+   "id": "1723de6b",
    "metadata": {},
    "outputs": [],
    "source": []
