--- a/template_experiments/MNLI_templates.ipynb
+++ b/template_experiments/MNLI_templates.ipynb
@@ -485,20 +485,7 @@
     }
    ],
    "source": [
-    "is_male = name_gender['gender'] == 'male'\n",
-    "is_female = name_gender['gender'] == 'female'\n",
-    "\n",
-    "is_white = name_race['race'] == 'white'\n",
-    "is_black = name_race['race'] == 'black'\n",
-    "is_latinx = name_race['race'] == 'latinx'\n",
-    "is_asian = name_race['race'] == 'asian'\n",
-    "\n",
-    "print(f\"Male names : {len(name_gender[is_male])}\")\n",
-    "print(f\"Female names : {len(name_gender[is_female])}\")\n",
-    "print(f\"White names : {len(name_race[is_white])}\")\n",
-    "print(f\"Black names : {len(name_race[is_black])}\")\n",
-    "print(f\"Latinx names : {len(name_race[is_latinx])}\")\n",
-    "print(f\"Asian names : {len(name_race[is_asian])}\")"
+    "33"
    ]
   },
   {
@@ -840,27 +827,26 @@
    "id": "50c2e8cd",
    "metadata": {},
    "source": [
-    "## Type 1\n",
+    "## Type B\n",
     "### either-disjunction inference (occ.)\n",
     "answer = 'neutral'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "1d727057",
    "metadata": {},
    "outputs": [],
    "source": [
     "TEMPLATE_PREM = 'Either {name1} or {name2} is {article} {occupation}'\n",
     "TEMPLATE_HYPO = '{name} is {article} {occupation}'\n",
-    "SEED = 1\n",
-    "TEMPLATE_CNT = 1000"
+    "SEED = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "15cf9029",
    "metadata": {},
    "outputs": [
@@ -878,7 +864,39 @@
     "name1 = name_gender[is_female]['name'].tolist()\n",
     "name2 = name_gender[is_male]['name'].tolist()\n",
     "print(f\"Case a: female {len(name1)} / male {len(name2)} / occupation {len(occupations)}\")\n",
-    "template_sents = generate_template(TEMPLATE_PREM, TEMPLATE_HYPO, name1, name2, occupations, TEMPLATE_CNT, SEED)"
+    "template_sents = generate_template(TEMPLATE_PREM, TEMPLATE_HYPO, name1, name2, occupations, None, SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "feeb21de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(SEED)\n",
+    "random.shuffle(template_sents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "15527a92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145000.0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(template_sents)*"
    ]
   },
   {
