data: race analysis

--- a/analysis/name_occupation_in_nli.ipynb
+++ b/analysis/name_occupation_in_nli.ipynb
@@ -4825,7 +4825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "360bae07",
+   "id": "d2330f0f",
    "metadata": {},
    "source": [
     "## 3. Gomu Attributes in NLI dataset"
@@ -4834,7 +4834,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d588e14",
+   "id": "29faf157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4845,7 +4845,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9c8b28cd",
+   "id": "a5dcca49",
    "metadata": {},
    "outputs": [
     {
@@ -4866,7 +4866,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ea070710",
+   "id": "ee084562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4882,7 +4882,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f507de63",
+   "id": "4b9f68eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4892,7 +4892,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a22508a8",
+   "id": "14cfcbe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4902,9 +4902,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "795db929",
+   "id": "0d01dc37",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -5086,20 +5086,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ecfd4fe2",
+   "execution_count": 29,
+   "id": "4609d5cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>thin</td>\n",
+       "      <td>50514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>able</td>\n",
+       "      <td>21953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>right</td>\n",
+       "      <td>13745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>good</td>\n",
+       "      <td>13609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>late</td>\n",
+       "      <td>11466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>unintelligent</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>snobby</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>sinewy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>breadwinner</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>bossy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>163 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              word  frequency\n",
+       "0             thin      50514\n",
+       "1             able      21953\n",
+       "2            right      13745\n",
+       "3             good      13609\n",
+       "4             late      11466\n",
+       "..             ...        ...\n",
+       "158  unintelligent          3\n",
+       "159         snobby          1\n",
+       "160         sinewy          1\n",
+       "161    breadwinner          1\n",
+       "162          bossy          1\n",
+       "\n",
+       "[163 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "attribute_count_list_df = pd.DataFrame(attribute_count_list)"
+    "attribute_count_list_df = pd.DataFrame(attribute_count_list, columns=['word', 'frequency'])\n",
+    "attribute_count_list_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "8ce723e8",
-   "metadata": {},
+   "execution_count": 30,
+   "id": "c6feb810",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -5115,9 +5225,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cea3f1a3",
+   "metadata": {},
+   "source": [
+    "## 4. Gomu Race in MNLI dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "75bb19b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gomu_race = json.load(open(\"../data/race.json\"))\n",
+    "gomu_race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "385e4da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_count = count_attribute(mnli_data, gomu_race)\n",
+    "race_count_list = sorted(race_count.items(), key=(lambda x:x[1]), reverse=True)\n",
+    "race_count_list_df = pd.DataFrame(race_count_list, columns=['word', 'frequency'])\n",
+    "save_df(race_count_list_df, 'race_occurence')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1723de6b",
+   "id": "2a7e63c9",
    "metadata": {},
    "outputs": [],
    "source": []
